# Web-scraper-with-LLM

./: .pre-commit-config.yaml  Dockerfile  README.md  build.sh  pyproject.toml  test.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  dev_task.md
.github/workflows/: docker-build.yml  mypy.yml  ruff.yml  testing.yml
app/: constant.py  main.py
app/llm_models/: __init__.py  base.py  gemini.py  ollama.py
app/routers/: __init__.py  car_desc_scraper.py
app/services/: __init__.py  scraper.py
app/services/html_process_hooks/: __init__.py  hooks.py  hooks_manager.py
docs/: features.md
tests/unit_tests/: test_fastapi_app.py  test_llm_wrapper.py  test_scraper.py
tests/unit_tests/test_html_process_hooks/: test_hooks.py  test_hooks_managers.py
